# SVG-Squisher

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compare.html
.github/workflows/: build.yml  release.yml
src/: main.cpp  svg_computed_style.cpp  svg_computed_style.h  svg_dom.cpp  svg_dom.h  svg_entry.cpp  svg_entry.h  svg_geometry.cpp  svg_geometry.h  svg_output.cpp  svg_output.h  svg_paint.cpp  svg_paint.h  svg_path.cpp  svg_path.h  svg_postprocess.cpp  svg_postprocess.h  svg_shape.cpp  svg_shape.h  svg_squisher.cpp  svg_squisher.h  svg_stroke.cpp  svg_stroke.h  svg_style.cpp  svg_style.h  svg_text.cpp  svg_text.h  svg_transform.cpp  svg_transform.h  svg_traversal.cpp  svg_traversal.h  svg_util.cpp  svg_util.h
